# icp489-banco-de-dados

./: docker-compose.yml  pyproject.toml
app/: app.py
app/.streamlit/: secrets.toml
app/utils/: constants.py  db_functions.py  stream_data.py
app/views/: 1_home.py  2_painel.py  3_estatisticas.py  4_debug.py
db/modelagem/: Conceitual.brM3  Conceitual_1.brM3  Logico.brM3  Lógico_1.brM3
